--- a/_1/OneTimePad/pom.xml
+++ b/_1/OneTimePad/pom.xml
@@ -63,9 +63,8 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.9.4</version>
+			<version>[2.9.5,)</version>
 		</dependency>
-
 	</dependencies>
 
 
